[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["random_walk_env"]

[project]
name = "random_walk_env"
description = "A random walk environment for Gymnasium"
readme = "README.md"  # Ensure this file exists
long_description_content_type = "text/markdown"  # Specify Markdown here
dependencies = [
  "gymnasium",
  "pre-commit",
]


